--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -60,11 +60,11 @@ jobs:
             --system-extension-image ${IMAGE_EXT} "${PROFILE}"
           docker load -i ./_out/installer-${ARCH}.tar
           docker tag ghcr.io/siderolabs/installer:${{ matrix.talos_version }} ghcr.io/qjoly/talos.chaosd.extension/installer:${{ env.APP_VERSION }}-${{ matrix.talos_version }}-${{ matrix.arch }}
-          docker push ghcr.io/qjoly/talos.chaosd.extension/installer:${{ env.APP_VERSION }}-${{ matrix.talos_version }}-${{ matrix.arch }}
+          docker push ghcr.io/qjoly/talos.chaosd.extension/installer:${{ matrix.talos_version }}-${{ matrix.arch }}
 
       - name: Create ISO
         env:
-          IMAGE_EXT: ghcr.io/qjoly/talos.chaosd.extension/app:${{ env.APP_VERSION }}-${{ matrix.talos_version }}-${{ matrix.arch }}
+          IMAGE_EXT: ghcr.io/qjoly/talos.chaosd.extension/app:${{ matrix.talos_version }}-${{ matrix.arch }}
           ARCH: ${{ matrix.arch }}
           PROFILE: iso
         run: |
