--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -59,7 +59,7 @@ jobs:
             "ghcr.io/siderolabs/imager:${{ matrix.talos_version }}" --arch "${ARCH}" \
             --system-extension-image ${IMAGE_EXT} "${PROFILE}"
           docker load -i ./_out/installer-${ARCH}.tar
-          docker tag ghcr.io/siderolabs/installer:${{ matrix.talos_version }} ghcr.io/qjoly/talos.chaosd.extension/installer:${{ env.APP_VERSION }}-${{ matrix.talos_version }}-${{ matrix.arch }}
+          docker tag ghcr.io/siderolabs/installer:${{ matrix.talos_version }} ghcr.io/qjoly/talos.chaosd.extension/installer:${{ matrix.talos_version }}-${{ matrix.arch }}
           docker push ghcr.io/qjoly/talos.chaosd.extension/installer:${{ matrix.talos_version }}-${{ matrix.arch }}
 
       - name: Create ISO
