--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: Create Installer
         env:
-          IMAGE_EXT: ghcr.io/qjoly/talos.chaosd.extension/app:${{ env.APP_VERSION }}-${{ matrix.talos_version }}-${{ matrix.arch }}
+          IMAGE_EXT: ghcr.io/qjoly/talos.chaosd.extension/app:${{ env.APP_VERSION }}-${{ matrix.talos_version }}-${{ matrix.arch }}@${{ steps.build.outputs.digest }}
           ARCH: ${{ matrix.arch }}
           PROFILE: installer
         run: |
@@ -60,7 +60,7 @@ jobs:
             "ghcr.io/siderolabs/imager:${{ matrix.talos_version }}" --arch "${ARCH}" \
             --system-extension-image ${IMAGE_EXT} "${PROFILE}"
           docker load -i ./_out/installer-${ARCH}.tar
-          docker tag ghcr.io/siderolabs/installer:${{ matrix.talos_version }} ghcr.io/qjoly/talos.chaosd.extension/installer:${{ matrix.talos_version }}-${{ matrix.arch }}@${{ steps.build.outputs.digest }}
+          docker tag ghcr.io/siderolabs/installer:${{ matrix.talos_version }} ghcr.io/qjoly/talos.chaosd.extension/installer:${{ matrix.talos_version }}-${{ matrix.arch }}
           docker push ghcr.io/qjoly/talos.chaosd.extension/installer:${{ matrix.talos_version }}-${{ matrix.arch }}
 
       - name: Create ISO
