Add entrypoint.go for chaosd initialization and remove run.sh

--- a/chaosd/Dockerfile
+++ b/chaosd/Dockerfile
@@ -6,18 +6,19 @@ RUN wget https://github.com/chaos-mesh/chaosd/archive/refs/tags/$CHAOSD_VERSION.
 WORKDIR /chaosd
 RUN make chaosd 
 RUN make chaos-tools
+# -- Prepare entrypoint
+WORKDIR /entrypoint
+COPY ./src/entrypoint.go /entrypoint/entrypoint.go
+RUN CGO_ENABLED=1 GOOS="" GOARCH="" go build -ldflags '-s -w' entrypoint.go
 FROM scratch
 COPY --from=builder /chaosd/bin/chaosd /rootfs/usr/local/lib/containers/chaosd/chaosd
 COPY --from=builder /chaosd/bin/tools /rootfs/usr/local/lib/containers/chaosd/usr/bin
 COPY --from=builder /bin/dd /rootfs/usr/local/lib/containers/chaosd/bin/dd
-COPY --from=builder /bin/bash /rootfs/usr/local/lib/containers/chaosd/bin/bash
-COPY --from=builder /bin/mkdir /rootfs/usr/local/lib/containers/chaosd/bin/mkdir
-COPY --from=builder /bin/cp /rootfs/usr/local/lib/containers/chaosd/bin/cp
 COPY --from=builder /lib /rootfs/usr/local/lib/containers/chaosd/lib
 COPY --from=builder /lib64 /rootfs/usr/local/lib/containers/chaosd/lib64
+COPY --from=builder /entrypoint/entrypoint /rootfs/usr/local/lib/containers/chaosd/entrypoint
 COPY chaosd.yaml /rootfs/usr/local/etc/containers/chaosd.yaml
 COPY manifest.yaml /
-COPY --chmod=555 src/run.sh /rootfs/usr/local/lib/containers/chaosd/run.sh
 WORKDIR /rootfs/usr/local/lib/containers/chaosd/
 
 
