--- a/chaosd/chaosd.yaml
+++ b/chaosd/chaosd.yaml
@@ -10,7 +10,7 @@ container:
     - PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/var/lib/chaosd/bin
   security:
     # In order to run chaosd we need to have write access to the filesystem
-    writeableRootfs: false
+    writeableRootfs: true
     writeableSysfs: true
   mounts:
     - source: /dev
