Comment out configuration option in chaosd.yaml for clarity

--- a/chaosd/chaosd.yaml
+++ b/chaosd/chaosd.yaml
@@ -3,7 +3,7 @@ depends:
   - network:
       - addresses
       - connectivity
-  - configuration: true
+#  - configuration: true
 container:
   entrypoint: /entrypoint
   environment:
