Comment out unused bind mount configuration in chaosd.yaml for clarity

--- a/chaosd/chaosd.yaml
+++ b/chaosd/chaosd.yaml
@@ -19,10 +19,10 @@ container:
       options:
         - bind
         - rw
-    - source: /var/lib/chaosd
-      destination: /var/lib/chaosd
-      type: bind
-      options:
-        - bind
-        - rw
+    # - source: /var/lib/chaosd
+    #   destination: /var/lib/chaosd
+    #   type: bind
+    #   options:
+    #     - bind
+    #     - rw
 restart: always
