--- a/chaosd/chaosd.yaml
+++ b/chaosd/chaosd.yaml
@@ -10,7 +10,7 @@ container:
     - PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/var/lib/chaosd/bin
   security:
     # In order to run chaosd we need to have write access to the filesystem
-    writeableRootfs: true
+    writeableRootfs: false
     writeableSysfs: true
   mounts:
     - source: /dev
@@ -19,10 +19,10 @@ container:
       options:
         - bind
         - rw
-    # - source: /var/lib/chaosd
-    #   destination: /var/lib/chaosd
-    #   type: bind
-    #   options:
-    #     - bind
-    #     - rw
+    - source: /var/lib/chaosd
+      destination: /var/lib/chaosd
+      type: bind
+      options:
+        - bind
+        - rw
 restart: always
